# correctEAD

./: .gitignore  README.md  correctead.py  distribution_corrige.xml  exemple.py  exemple_distribution.py  indent_xml.py  pyproject.toml
ead/: un_ir_modifie.xml  un_ir_preserve.xml  un_ir_transforme.xml
src/correctead/: __init__.py  document.py  encoding.py  exceptions.py  node.py
tests/: test_document.py  test_examples.py
tests/archive/: exemple_encoding.py
tests/archive/ead/: un_ir.xml
tests/fixtures/: un_ir_repetition.xml
