[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "correctead"
version = "0.1.0"
description = "A simple tool for EAD XML correction."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml",
]

[project.urls]
"Homepage" = "https://github.com/user/correctead" # Placeholder URL
